For more detailed instructions on filling in the ChangeLog form, see 
`/fi/doc/procedures/changelogs.txt'.
*******************************************************************************
<version for this commit, if applicable>

Documentation changes:	<`none' or give pointer to them>

<standard changelog date stamp>
	* <changes go here...>

*******************************************************************************
2.0.21.alpha.0

Documentation changes:	no new features

Wed Jul 09 13:07:24 1997    <layer@HOBART>

	* fi-keys.el: new fi:subprocess-send-input from smh that fixes
	^M's on win95

*******************************************************************************
2.0.21.pre-alpha.9

Documentation changes:	no new features

Mon Mar 24 16:08:15 1997  Kevin Layer  <layer@ultra>

	* fi-subproc.el: if no lisp image name (or nil when
	non-interactive), then don't pass -I for backward compat

*******************************************************************************
2.0.21.pre-alpha.8

Documentation changes:	no new features

Fri Mar 21 13:33:01 1997  Kevin Layer  <layer@ultra>

	* local-fi-developer-hooks.el: make sure C mode indenting is set
	to "bsd" style

*******************************************************************************
2.0.21.pre-alpha.7

Documentation changes:	no new features

Tue Mar 11 12:26:23 1997  Kevin Layer  <layer@ultra>

	* fi-leep-xemacs.el: remove debugging code from comment
	* fi-lep.el: supply package in call to fi::lisp-complete-2
	* fi-subproc.el: make UNIX properly handle the list form of
	fi:common-lisp-image-name.
	* fi-utils.el: completion fixes when there is a package prefix

*******************************************************************************
2.0.21.pre-alpha.6

Documentation changes:	no new features

Thu Feb 27 09:30:39 1997  Kevin Layer  <layer@ultra>

	<pretty much all files changed>: deal with compiler warnings

*******************************************************************************